[tool.poetry]
name = "fast-scan-cleanup"
version = "0.1.0"
description = "Quickly clean up scanned documents."
authors = ["PurpleMyst <PurpleMyst@users.noreply.github.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.9"
pypdf = {extras = ["image"], version = "^3.2.0"}
argh = "^0.26.2"
rich = "^13.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
